--- a/RoboTech/Areas/Admin/Views/AdminProducts/Index.cshtml
+++ b/RoboTech/Areas/Admin/Views/AdminProducts/Index.cshtml
@@ -22,7 +22,7 @@
                     <div class="col-md-6">
                         <div class="input-affix m-v-10">
                             <i class="prefix-icon anticon anticon-search opacity-04"></i>
-                            <input id="keyword" name="keyword" type="text" class="form-control" placeholder="Tìm kiếm sản phẩm">
+                            <input id="keyword" name="keyword" type="text" class="form-control" placeholder="Search product ...">
                         </div>
                     </div>
                     <div class="col-md-6">
