--- a/RoboTech/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RoboTech/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>@ViewData["Title"]</title>
+    <title>Admin Dashboard</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/Adminassets/images/logo/favicon.png">
@@ -154,7 +154,7 @@
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div>
                                             <i class="anticon opacity-04 font-size-16 anticon-logout"></i>
-                                            <span class="m-l-10">Logout</span>
+                                            <a asp-controller="Logout" asp-action="Index"><span class="m-l-10">Logout</span></a>
                                         </div>
                                         <i class="anticon font-size-10 anticon-right"></i>
                                     </div>
