--- a/RoboTech/Views/Product/Index.cshtml
+++ b/RoboTech/Views/Product/Index.cshtml
@@ -18,7 +18,7 @@
                 Sort by:&nbsp;&nbsp;
             </label>
             <select id="txtCatID" name="txtCatID" asp-items="ViewBag.DanhMuc">
-                <option selected>Chọn danh mục</option>
+                <option selected>Select a category</option>
 @*                <option value="1">Trending...</option>
                 <option value="2">Price: Low to high..</option>
                 <option value="3">Price: High to low..</option>*@
@@ -86,7 +86,7 @@
                                                     </div>
                                                 </div>
                                                 <button type="button" class="btn bg-cart w-100 mt-2 add-to-cart">
-                                                    <a href="@url"><i class="fa-solid fa-cart-plus">&nbsp;Bye Now</i></a>
+                                                    <a href="@url"><i class="fa-solid fa-cart-plus">&nbsp;BUY NOW</i></a>
                                               @*      <input hidden asp-for="@item.ProductId" />*@
                                                 </button>
                                                 
