--- a/RoboTech/Views/Shared/_Layout.cshtml
+++ b/RoboTech/Views/Shared/_Layout.cshtml
@@ -41,10 +41,19 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <form class="d-flex offset-1">
+                        
+                        <form asp-controller="TimKiem" asp-action="FindProduct" class="d-flex offset-1" method="post">
+                           
+                                @Html.AntiForgeryToken()
+                                <input class="form-control search-bar" name="keyword" type="text" placeholder="Search any products...">
+                                <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                            
+                            
+                        </form>
+                        @*<form class="d-flex offset-1">
                             <input class="form-control search-bar" type="text" placeholder="Search any products...">
                             <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        </form>
+                        </form>*@
                         <li class="offset-1" style="margin-top: 7px">
                             <div>
                                 @if (User.Identity.IsAuthenticated)
