--- a/RoboTech/Areas/Admin/Views/AdminRoles/Edit.cshtml
+++ b/RoboTech/Areas/Admin/Views/AdminRoles/Edit.cshtml
@@ -34,7 +34,7 @@
 
         <div class="form-group col-md-6">
             <div class="col-sm-6">
-                <button type="submit" class="btn btn-primary">Lưu thay đổi</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
