--- a/RoboTech/Areas/Admin/Views/Shared/_SideNavPartialView.cshtml
+++ b/RoboTech/Areas/Admin/Views/Shared/_SideNavPartialView.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-file"></i>
                     </span>
-                    <span class="title">QUẢN LÝ ĐƠN HÀNG</span>
+                    <span class="title">ORDERS</span>
                 </a>
             </li>
             <li class="nav-item dropdown">
@@ -26,14 +26,14 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-file"></i>
                     </span>
-                    <span class="title">QUẢN LÝ SẢN PHẨM</span>
+                    <span class="title">PRODUCTS</span>
                     <span class="arrow">
                         <i class="arrow-icon"></i>
                     </span>
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a asp-area="Admin" asp-controller="AdminProducts" asp-action="Index">DANH SÁCH SẢN PHẨM</a>
+                        <a asp-area="Admin" asp-controller="AdminProducts" asp-action="Index">LIST PRODUCTS</a>
                     </li>
                     <li>
                         <a href="form-layouts.html">Form Layouts</a>
@@ -49,7 +49,7 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-file"></i>
                     </span>
-                    <span class="title">QUẢN LÝ KHÁCH HÀNG</span>
+                    <span class="title">CUSTOMERS</span>
                 </a>
             </li>
 
@@ -59,7 +59,7 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-form"></i>
                     </span>
-                    <span class="title">DOANH SỐ</span>
+                    <span class="title">SALES</span>
                     <span class="arrow">
                         <i class="arrow-icon"></i>
                     </span>
@@ -81,20 +81,20 @@
                     <span class="icon-holder">
                         <i class="anticon anticon-table"></i>
                     </span>
-                    <span class="title">QUẢN LÝ HỆ THỐNG</span>
+                    <span class="title">SYSTEM</span>
                     <span class="arrow">
                         <i class="arrow-icon"></i>
                     </span>
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a asp-area="Admin" asp-controller="AdminAccounts" asp-action="Index">QUẢN LÝ TÀI KHOẢN</a>
+                        <a asp-area="Admin" asp-controller="AdminAccounts" asp-action="Index">ADMINISTRATION ACCOUNT</a>
                     </li>
                     <li>
-                        <a asp-area="Admin" asp-controller="AdminCategories" asp-action="Index">QUẢN LÝ DANH MỤC</a>
+                        <a asp-area="Admin" asp-controller="AdminCategories" asp-action="Index">PRODUCT CATEGORY</a>
                     </li>
                     <li>
-                        <a asp-action="Index" asp-controller="AdminRoles" asp-area="Admin">QUẢN LÝ TRUY CẬP</a>
+                        <a asp-action="Index" asp-controller="AdminRoles" asp-area="Admin">ACCESS ACCOUNT</a>
                     </li>
                     <li>
                         <a href="data-table.html">Quản lý Tỉnh/Thành</a>
@@ -102,7 +102,7 @@
 
                 </ul>
             </li>
-            <li class="nav-item">
+            @*<li class="nav-item">
                 <a class="dropdown-toggle" asp-action="Index" asp-controller="AdminPages" asp-area="Admin">
                     <span class="icon-holder">
                         <i class="anticon anticon-file"></i>
@@ -146,7 +146,7 @@
                         <a href="error-2.html">Error 2</a>
                     </li>
                 </ul>
-            </li>
+            </li>*@
         </ul>
     </div>
 </div>
