--- a/RoboTech/Views/Checkout/Index.cshtml
+++ b/RoboTech/Views/Checkout/Index.cshtml
@@ -181,13 +181,13 @@
                                                         </div>
                                                         <div class="ms-3">
                                                             <h6><strong>@item.product.Name</strong></h6>
-                                                            <p class="small mb-0">256GB, Navy Blue</p>
+                                                            
                                                         </div>
                                                     </div>
                                                     <div class="d-flex flex-row align-items-center">
-                                                        <div style="width: 50px;">
+                                                      @*  <div style="width: 50px;">
                                                             <h6 class="fw-normal mb-0">@item.amount</h6>
-                                                        </div>
+                                                        </div>*@
                                                         <div style="width: 80px;">
                                                             <h6 class="mb-0">@item.TotalMoney.ToString("#,##0") VNĐ</h6>
                                                         </div>
@@ -237,8 +237,8 @@
                                             </span>
                                         </strong>
                                     </p>
-                                    @* <strong>Thanh toán khi giao hàng(COD)</strong>
-                                    <h3>Khách hàng sẽ thanh toán khi nhận hàng</h3>*@
+                                    @* <strong>Checkout nowkhi giao hàng(COD)</strong>
+                                    <h3>Khách hàng sẽ Checkout nowkhi nhận hàng</h3>*@
                                 </div>
                             </div>
                         </div>
