--- a/RoboTech/Views/Checkout/Success.cshtml
+++ b/RoboTech/Views/Checkout/Success.cshtml
@@ -58,6 +58,10 @@
                                 <p>Receiver: @Model.FullName</p>
                                 <p>Phone number: @Model.Phone</p>
                                 <p>Address: @Model.Address</p>
+                                <a href="/ProductList" style="color:red;font-weight:bold;">
+                                    <i class="fas fa-long-arrow-alt-left me-4"></i>
+                                    Continue shopping
+                                </a>
                             <br />
                                 To view order details please visit <a asp-controller="Accounts" asp-action="Dashboard"><strong>My Account.</strong></a> Need help? Contact us by phone number 0392697777!
                         </div>
