--- a/RoboTech/Views/Home/Index.cshtml
+++ b/RoboTech/Views/Home/Index.cshtml
@@ -15,14 +15,12 @@
                 </div>
                 <ul class="nav-item">
                     <li >
-                        <form action="danhmuc/laptop" method="get">
                             <button class="btn" type="button">
                                 <i class="fa-solid fa-laptop"></i>Laptop
                             </button>
-                        </form>
                         <ul class="subnav">
                             <li >
-                                <a class="head-nav" href="#">
+                                <a class="head-nav" href="danhmuc/laptop">
                                     <h4 style="margin-top: 15px ">
                                         GAMING
                                     </h4>
@@ -502,7 +500,7 @@
                                     <img src="~/assets/img/pc1.jpg" alt="" width="100%" height="200px" />
                                 </div>
                                 <p class="details">
-                                    PC gaming Asus rog strix ga35
+                                    PC gaming Asus rog strix
                                 </p>
                                 <span class="price">
                                     <strike>30.000.000vnd</strike><br />
@@ -515,15 +513,15 @@
                     <div class="swiper-slide">
                         <a href="#">
                             <div class="slider-box">
-                                <div class="img-box">
-                                    <img src="~/assets/img/pc1.jpg" alt="" width="100%" height="200px" />
+                                <div class="img-box"><img src="~/images/products/asus-gaming-rog.jpg" alt="" width="100%" height="200px" />
+                                   
                                 </div>
                                 <p class="details">
-                                    PC gaming Asus rog strix ga35
+                                    PC Asus Gaming ROG
                                 </p>
                                 <span class="price">
-                                    <strike>30.000.000vnd</strike><br />
-                                    25.000.000vnd
+                                    <strike>48.190.000vnd</strike><br />
+                                    47.190.000vnd
                                 </span>
                                 <div class="btn buy-btn">Add To Cart</div>
                             </div>
@@ -533,14 +531,14 @@
                         <a href="#">
                             <div class="slider-box">
                                 <div class="img-box">
-                                    <img src="~/assets/img/pc1.jpg" alt="" width="100%" height="200px" />
+                                    <img src="~/images/products/asus-vivobook-15x-oled.jpg" alt="" width="100%" height="200px" />
                                 </div>
                                 <p class="details">
-                                    PC gaming Asus rog strix ga35
+                                    PC ASUS Vivobook OLED
                                 </p>
                                 <span class="price">
-                                    <strike>30.000.000vnd</strike><br />
-                                    25.000.000vnd
+                                    <strike>19.590.000vnd</strike><br />
+                                    18.590.000vnd
                                 </span>
                                 <div class="btn buy-btn">Add To Cart</div>
                             </div>
@@ -550,14 +548,15 @@
                         <a href="#">
                             <div class="slider-box">
                                 <div class="img-box">
-                                    <img src="~/assets/img/pc1.jpg" alt="" width="100%" height="200px" />
+                                    <img src="~/images/products/laptop-lenovo-ideapad.jpg" width="100%" height="200px" />
+                               
                                 </div>
                                 <p class="details">
-                                    PC gaming Asus rog strix ga35
+                                    Laptop Lenovo Ideapad
                                 </p>
                                 <span class="price">
-                                    <strike>30.000.000vnd</strike><br />
-                                    25.000.000vnd
+                                    <strike>15.990.000vnd</strike><br />
+                                    13.890.000vnd
                                 </span>
                                 <div class="btn buy-btn">Add To Cart</div>
                             </div>
@@ -692,15 +691,30 @@
                     <div class="swiper-slide">
                         <a href="#">
                             <div class="slider-box">
-                                <div class="img-box">
-                                    <img src="~/assets/img/laptop new arrival.jpg" alt="" width="100%" height="200px" />
+                                <div class="img-box"><img src="~/images/products/laptop-dell-inspiron-15-3520-i3u082w11blu.jpg" width="100%" height="200px" />
                                 </div>
                                 <p class="details">
-                                    PC gaming Asus rog strix ga35
+                                    Laptop Dell Inspirion 15 3000 I3511
                                 </p>
                                 <span class="price">
-                                    <strike>30.000.000vnd</strike><br />
-                                    25.000.000vnd
+                                    <strike>14.990.000vnd</strike><br />
+                                    13.990.000vnd
+                                </span>
+                                <div class="btn buy-btn">Add To Cart</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#">
+                            <div class="slider-box">
+                                <div class="img-box"><img src="~/images/products/macbook-pro-14-m1-core-gpu.jpeg" alt="" width="100%" height="200px" />
+                                </div>
+                                <p class="details">
+                                    Macbook Pro 14 M1 Pro 10 CPU
+                                </p>
+                                <span class="price">
+                                    <strike>71.990.000vnd</strike><br />
+                                    61.990.000vnd
                                 </span>
                                 <div class="btn buy-btn">Add To Cart</div>
                             </div>
@@ -713,11 +727,11 @@
                                     <img src="~/assets/img/laptop new arrival.jpg" alt="" width="100%" height="200px" />
                                 </div>
                                 <p class="details">
-                                    PC gaming Asus rog strix ga35
+                                    Laptop MSI Modern 14 B11SBU-668VN
                                 </p>
                                 <span class="price">
-                                    <strike>30.000.000vnd</strike><br />
-                                    25.000.000vnd
+                                    <strike>22.490.000vnd</strike><br />
+                                    13.990.000vnd
                                 </span>
                                 <div class="btn buy-btn">Add To Cart</div>
                             </div>
@@ -727,27 +741,10 @@
                         <a href="#">
                             <div class="slider-box">
                                 <div class="img-box">
-                                    <img src="~/assets/img/laptop new arrival.jpg" alt="" width="100%" height="200px" />
+                                    <img src="~/images/products/laptop-asus-vivobook-15x-oled-a1503za-l1421w.png" alt="" width="100%" height="200px" />
                                 </div>
                                 <p class="details">
-                                    PC gaming Asus rog strix ga35
-                                </p>
-                                <span class="price">
-                                    <strike>30.000.000vnd</strike><br />
-                                    25.000.000vnd
-                                </span>
-                                <div class="btn buy-btn">Add To Cart</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#">
-                            <div class="slider-box">
-                                <div class="img-box">
-                                    <img src="~/assets/img/laptop new arrival.jpg" alt="" width="100%" height="200px" />
-                                </div>
-                                <p class="details">
-                                    PC gaming Asus rog strix ga35
+                                    Laptop Asus VivoBook A515EA OLED
                                 </p>
                                 <span class="price">
                                     <strike>30.000.000vnd</strike><br />
